@@ -1,5 +1,9 @@
 2004-03-31  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* input/test/polymetric-differing-notes.ly: use ly:music-compress.
+
+	* input/regression/repeat-unfold-tremolo.ly: new file.
+
 	* scm/music-functions.scm (unfold-repeats): undo music compression
 	too.
 
